# ElPh

./: .gitignore  LICENCE.md  README.md  pyproject.toml
.github/workflows/: release.yml
example/: EXAMPLE.md  anthracene.cif  mobility.json
example/btbt/: CONTCAR  FORCE_SETS  dimer_C.xyz  phonopy_disp.yaml
example/btbt/disp_j/: C.txt
example/btbt/mapping/: map_C.npz
example/btbt/projection/: 2026_variance.ipynb
example/btbt/projection/disp/: note.txt
example/old_files/: EXAMPLE.md  mobility.json
example/pentacene/: CONTCAR  dimer_A.xyz  phonopy_disp.yaml
example/pentacene/disp_j/: A.txt
example/pentacene/mapping/: map_A.npz
example/pentacene/projection/: 2026_variance.ipynb
example/pentacene/projection/disp/: note.txt
example/tips-pen/: CONTCAR  dimer_A.xyz  phonopy_disp.yaml
example/tips-pen/disp_j/: A.txt
example/tips-pen/mapping/: map_A.npz
example/tips-pen/projection/: 2026_variance.ipynb
example/tips-pen/projection/disp/: note.txt
src/elph/: __init__.py  create_disp_input.py  create_j0_input.py  disp_j.py  elph.py  elphtool.py  j0.py  main.py  mobility.py  mode_visual.py  svdprojection.py  utils.py  visualize.py  workflow.py
src/elph/old_scripts/: elphtool.py  main.py
visualize/: epc_mode.ipynb  mode_visual.py  visual.py
